--- a/nodes/Esep9/Esep/index.html
+++ b/nodes/Esep9/Esep/index.html
@@ -93,6 +93,7 @@
                         </div>
                     </form>
                 </div>
+                <fieldset class="box" id="mark" hidden>Ваша оценка: <span id="markValue"></span>% <span id="markSend"></span></fieldset>
                 <div class="answers clearB" id="solution">
                     <div class="content">
                         <div class="blockTitle">
