--- a/nodes/Esep1/Esep/esep01.html
+++ b/nodes/Esep1/Esep/esep01.html
@@ -6,6 +6,7 @@
     <title>Esep 01</title>
     <link rel="stylesheet" href="../../../css/tasks/materialize.min.css">
     <link rel="stylesheet" href="../../../css/tasks/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
