--- a/nodes/Esep2/Esep/esep02.html
+++ b/nodes/Esep2/Esep/esep02.html
@@ -26,7 +26,7 @@
 
                         <div class="col s12">
                             <div class="tree col s12">
-                                <ul>
+                                <ul class="firstUl">
                                     <li class="subtree">
                                         <p>ХТЖ-ң моделдері</p>
                                         <ul>
@@ -61,9 +61,9 @@
                                                     <li class="subtree">
                                                         <p id="ans03" class="droppable droppable-item"></p>
                                                     </li>
-                                                    <li class="subtree">
+                                                    <li class="subtree drop-table">
                                                         <p id="ans04" class="droppable droppable-item"></p>
-                                                        <ul class="drop-table">
+                                                        <ul>
                                                             <li>
                                                                 <p id="ans09" class="droppable droppable-item"></p>
                                                             </li>
@@ -86,7 +86,7 @@
                                     <li id="01" class="draggable ">Операциялы-сипаттамалы</li>
                                     <li id="02" class="draggable ">Иконографиялық</li>
                                     <li id="03" class="draggable ">Символикалық (аналитикалық)</li>
-                                    <li id="04" class="draggable ">Иконографиялық2</li>
+                                    <li id="04" class="draggable ">Иконографиялық</li>
                                     <li id="05" class="draggable ">Функционалдық-үлгілер</li>
                                     <li id="06" class="draggable ">Құрылымдылық-үлгілер</li>
                                     <li id="07" class="draggable ">Операциялық-үлгілер</li>
