--- a/nodes/Esep1/Esep/index.html
+++ b/nodes/Esep1/Esep/index.html
@@ -66,8 +66,8 @@
 
 
                         </div>
-                        <div class="col s12" id="ansList">
-                            <ul id='' class="col s6 table table-hover">
+                        <div class="row" id="ansList">
+                            <ul class="col s6 table table-hover">
                                 <li id="01" class="draggable draggable-item-clear col s4">Шикізатты дайындау</li>
                                 <li id="02" class="draggable draggable-item-clear col s4">Химиялық айналдыру</li>
                                 <li id="03" class="draggable draggable-item-clear col s4">өнімді балу және тазарту</li>
