--- a/nodes/Esep6/Esep/index.html
+++ b/nodes/Esep6/Esep/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Esep 05</title>
+    <title>Esep 06</title>
     <link rel="stylesheet" href="../../../css/tasks/materialize.min.css">
     <link rel="stylesheet" href="../../../css/tasks/style.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,75 +15,128 @@
         <div class="row">
             <div class="contentWrapper">
                 <div class="esepTitle">
-                    Химия-технологиялық жүйелердің моделдерін жіктеу
+                    Типтік технологиялық операторларды жіктеу.
                 </div>
                 <div class="content">
                     <div class="dragndropsection">
                         <div class="row">
-                            <div class="col s6">
-                                <img src="assets/img/graph.png" alt="">
+                            <div class="col s2 offset-s5 droppable-item parent">
+                                Типтік ТО
                             </div>
-                            <div class="col s6">
-                                <p class="ta">
-                                    Сүретке қарай жауаптарды біріктіріңіз
-                                </p>
-                                <div class="row">
-                                    <div class="col s6">
-                                        <div id="ans01" class="col s12 droppable-item ">
-                                            1
-                                        </div>
-                                        <div id="ans02" class="col s12 droppable-item">
-                                            2
-                                        </div>
-                                        <div id="ans03" class="col s12 droppable-item">
-                                            3
-                                        </div>
-                                        <div id="ans04" class="col s12 droppable-item">
-                                            4
-                                        </div>
-                                        <div id="ans05" class="col s12 droppable-item">
-                                            5
-                                        </div>
-                                        <div id="ans06" class="col s12 droppable-item">
-                                            6
-                                        </div>
-                                        <div id="ans07" class="col s12 droppable-item">
-                                            7
-                                        </div>
-                                        <div id="ans08" class="col s12 droppable-item">
-                                            8
-                                        </div>
-                                    </div>
-                                    <ul class="col s6" id="ansList">
-                                        <li id="01" class="col s12 draggable">
-                                            Бункер
-                                        </li>
-                                        <li id="02" class="col s12 draggable">
-                                            Қайнау қабатты пеші
-                                        </li>
-                                        <li id="03" class="col s12 draggable">
-                                            Буқыздырғыш
-                                        </li>
-                                        <li id="04" class="col s12 draggable">
-                                            Бу қазаны
-                                        </li>
-                                        <li id="05" class="col s12 draggable">
-                                            Барабан-сепаратор
-                                        </li>
-                                        <li id="06" class="col s12 draggable">
-                                            Салқындатқыш элементтер
-                                        </li>
-                                        <li id="07" class="col s12 draggable">
-                                            Циркуляциялық айдағыш
-                                        </li>
-                                        <li id="08" class="col s12 draggable">
-                                            Салқындатқыш элементтер
-                                        </li>
-                                    </ul>
+                        </div>
+                        <div class="row second-row">
+                            <div class="col s2 offset-s2 droppable-item">
+                                Негізгі ТО
+                            </div>
+                            <div class="col s2 offset-s4 droppable-item">
+                                Қосымша ТО
+                            </div>
+                        </div>
+                        <div class="row third-row">
+                            <div class="col s6 first-col">
+                                <div class="col s3">
+                                    <div id="ans01" class="droppable-item"></div>
+                                </div>
+                                <div class="col s3">
+                                    <div id="ans02" class="droppable-item"></div>
+                                </div>
+                                <div class="col s3">
+                                    <div id="ans03" class="droppable-item"></div>
+                                </div>
+                                <div class="col s3">
+                                    <div id="ans04" class="droppable-item"></div>
+                                </div>
+                            </div>
+
+                            <div class="col s6 second-col">
+                                <div class="col s3 offset-s2">
+                                    <div id="ans05" class="droppable-item"></div>
+                                </div>
+                                <div class="col s3">
+                                    <div id="ans06" class="droppable-item"></div>
+                                </div>
+                                <div class="col s3">
+                                    <div id="ans07" class="droppable-item"></div>
                                 </div>
                             </div>
                         </div>
+                        <div class="row bottom-content">
 
+                            <div class="col s6">
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/1.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/2.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/3.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/4.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col s6">
+                                <div class="col s3 offset-s2">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/5.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/6.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col s3">
+                                    <div class="droppable-item">
+                                        <img src="assets/img/7.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="ta">
+                                Типтік ТО-ны суреттеу
+                            </p>
+                        </div>
+                        <div id="ansList" class="row">
+                            <div class="col s6">
+                                <ul class="row table table-hover">
+                                    <li id="01" class="draggable col s3">
+                                        Химиялық айналдыру
+                                    </li>
+                                    <li id="02" class="draggable col s3">
+                                        Күйаралық салмақалмасу
+                                    </li>
+                                    <li id="03" class="draggable col s3">
+                                        Араластыру
+                                    </li>
+                                    <li id="04" class="draggable col s3">
+                                        Бөлу
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col s6">
+                                <ul class="row table table-hover">
+                                    <li id="05" class="draggable col s3">
+                                        Жылыту (салқындату)
+                                    </li>
+                                    <li id="06" class="draggable col s3">
+                                        Сығу (созу)
+                                    </li>
+                                    <li id="07" class="draggable col s3">
+                                        Саттардың агрегаттық күйін өзгерту
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <fieldset>
                         <div id="AnsButtons">
