--- a/nodes/Esep12/Esep/index.html
+++ b/nodes/Esep12/Esep/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Esep 13</title>
+    <title>Esep 12</title>
     <link rel="stylesheet" href="../../../css/tasks/materialize.min.css">
     <link rel="stylesheet" href="../../../css/tasks/style.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,53 +15,87 @@
         <div class="row">
             <div class="contentWrapper">
                 <div class="esepTitle">
-                    Егер химиялық реакция мен диффузияның жылдамдығы бірдей болса, концентрацияның үлестірілу сипаты суретте көрсетілгендегіден күрделі болады.
+                    Газды реагенттің концентрациясының сГ сфералық қатты бөлшекпен әрекеттесу нәтижесінде өзгеруі
                 </div>
                 <div class="content">
                     <div class="dragndropsection">
                         <div class="row">
                             <div class="col s6">
-                                <img src="assets/img/graph.png" alt="">
+                                <img src="assets/img/graph.png" style="width: 100%;" alt="">
+                                <div class="row">
+                                    <div class="col s4">
+                                        <div id="ans04" class="droppable-item">
+                                            а
+                                        </div>
+                                    </div>
+                                    <div class="col s4">
+                                        <div id="ans05" class="droppable-item">
+                                            ә
+                                        </div>
+                                    </div>
+                                    <div class="col s4">
+                                        <div id="ans06" class="droppable-item">
+                                            б
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col s6">
                                 <p class="ta">
                                     Сүретке қарай жауаптарды біріктіріңіз
                                 </p>
                                 <div class="row">
-                                    <div class="col s6">
-                                        <div id="ans01" class="col s12 droppable-item ">
+                                    <div class="col s4">
+                                        <div id="ans01" class="droppable-item">
                                             1
                                         </div>
-                                        <div id="ans02" class="col s12 droppable-item">
+                                    </div>
+                                    <div class="col s4">
+                                        <div id="ans02" class="droppable-item">
                                             2
                                         </div>
-                                        <div id="ans03" class="col s12 droppable-item">
+                                    </div>
+                                    <div class="col s4">
+                                        <div id="ans03" class="droppable-item">
                                             3
                                         </div>
-                                        <div id="ans04" class="col s12 droppable-item">
-                                            4
-                                        </div>
-
                                     </div>
-                                    <ul class="col s6" id="ansList">
-                                        <li id="01" class="col s12 draggable">
-                                            Газдың шекаралық қабаты
-                                        </li>
-                                        <li id="02" class="col s12 draggable">
-                                            Күйлердің бөліну беті
-                                        </li>
-                                        <li id="03" class="col s12 draggable">
-                                            Реакцияның беті
-                                        </li>
-                                        <li id="04" class="col s12 draggable">
-                                            Сұйықтықтың шекаралық қабаты
-                                        </li>
+                                </div>
+                            </div>
 
-                                    </ul>
+                        </div>
+                        <div class="row" id="ansList">
+                            <div class="col s2">
+                                <div id="01" class="draggable answer-item">
+                                    Газды ламинарлы жұқа қабат
+                                </div>
+                            </div>
+                            <div class="col s2">
+                                <div id="02" class="draggable answer-item">
+                                    Реакция өнімдерінің қабаты
+                                </div>
+                            </div>
+                            <div class="col s2">
+                                <div id="03" class="draggable answer-item">
+                                    Әрекеттеспеген дән
+                                </div>
+                            </div>
+                            <div class="col s2">
+                                <div id="04" class="draggable answer-item">
+                                    Сыртқы диффузия
+                                </div>
+                            </div>
+                            <div class="col s2">
+                                <div id="05" class="draggable answer-item">
+                                    Ішкідиффузия
+                                </div>
+                            </div>
+                            <div class="col s2">
+                                <div id="06" class="draggable answer-item">
+                                    Химиялық реакция
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <fieldset>
                         <div id="AnsButtons">
